--- a/input/_layouts/en.haml
+++ b/input/_layouts/en.haml
@@ -1,23 +1,28 @@
 %html
   %head
     %title
-      {{page | to_title: "Звукорежиссёр"}}
+      {{page | to_title: "Sound engineer"}}
       &mdash; Alexandr Fedorov
 
     %base{:href => "/"}
 
     :javascript
-      if (location.pathname.indexOf('output') > -1 || location.host == 'localhost' || location.port != 80) {
+
+      if (location.pathname.indexOf('output') > -1 || location.host.match(/localhost|github/)) {
         var base = document.getElementsByTagName('base')[0];
-        var languages = /(en|ru|de)/;
+        var languages = /(?:\/|^)(en|ru|de)\//;
         var path = location.pathname;
         var language = (path.match(languages) || [null, null])[1];
-        var root = language ? path.split(language)[0] : path.split('/output/')[0] + '/output/';
+        var root = language 
+          ? path.indexOf('/output/') > -1
+            ? path.split(language)[0] 
+            : '/' + language + '/'
+          : path.split('/output/')[0] + '/output/';
         base.setAttribute('href', root);
         document.onclick = function(e) {
           for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
             var href = el.getAttribute('href');
-            if (href) {
+            if (href && el.host == location.host) {
               // convert absolute path into relative path
               if (href.charAt(0) == '/')
                 href = href.substring(1);
@@ -39,8 +44,24 @@
             }
           }
         }
+      } else {
+        document.onclick = function(e) {
+          for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
+            var href = el.getAttribute('href');
+            if (location.host != el.host) continue;
+            var zone = location.host.split('.').pop()
+            if (zone == 'com' && href.substring(0, 4) == '/ru/')
+              href = '//' + location.hostname + href.substring(4);
+            else if (zone == 'ru' && href.substring(0, 4) == '/en/')
+              href = '//' + location.hostname + href.substring(3);
+            if (href != el.getAttribute('href')) {
+              el.setAttribute('href', href);
+              e.preventDefault();
+              el.click();
+            }
+          }
+        }
       }
-
     %link{:rel => "stylesheet", :href => "stylesheets/screen.css"}
     %link{:rel => "stylesheet", :href => "http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic"}
 
@@ -80,7 +101,7 @@
               %dt.email
                 email: 
               %dd
-                %a{:href => "#"} alexandr.fedorov@gmail.com
+                %a{:href => "#"} me@alexandrfedorov.com
 
 
       .contact#contact{:hidden => true}
