--- a/input/_layouts/ru.haml
+++ b/input/_layouts/ru.haml
@@ -6,12 +6,16 @@
 
     %base{:href => "/"}
     :javascript
-      if (location.pathname.indexOf('output') > -1 || location.host == 'localhost' || location.port != 80) {
+      if (location.pathname.indexOf('output') > -1 || location.host.match(/localhost|github/)) {
         var base = document.getElementsByTagName('base')[0];
         var languages = /(?:\/|^)(en|ru|de)\//;
         var path = location.pathname;
         var language = (path.match(languages) || [null, null])[1];
-        var root = language ? path.split(language)[0] : path.split('/output/')[0] + '/output/';
+        var root = language 
+          ? path.indexOf('/output/') > -1
+            ? path.split(language)[0] 
+            : '/' + language + '/'
+          : path.split('/output/')[0] + '/output/';
         base.setAttribute('href', root);
         document.onclick = function(e) {
           for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
@@ -35,6 +39,23 @@
                 el.click();
               }
               break;
+            }
+          }
+        }
+      } else {
+        document.onclick = function(e) {
+          for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
+            var href = el.getAttribute('href');
+            if (location.host != el.host) continue;
+            var zone = location.host.split('.').pop()
+            if (zone == 'com' && href.substring(0, 4) == '/ru/')
+              href = '//' + location.hostname + href.substring(4);
+            else if (zone == 'ru' && href.substring(0, 4) == '/en/')
+              href = '//' + location.hostname + href.substring(3);
+            if (href != el.getAttribute('href')) {
+              el.setAttribute('href', href);
+              e.preventDefault();
+              el.click();
             }
           }
         }
@@ -78,7 +99,7 @@
               %dt.email
                 почта: 
               %dd
-                %a{:href => "#"} alexandr.fedorov@gmail.com
+                %a{:href => "#"} me@alexandrfedorov.com
 
       .contact#contact{:hidden => true}
         %section
