--- a/input/stylesheets/_main.sass
+++ b/input/stylesheets/_main.sass
@@ -15,7 +15,16 @@ main
       + menu
         :margin-left 0.8em
         :display inline-block
-      
+
+      img
+        :width 30px
+        :height 30px
+        :vertical-align top
+        :margin-left 0.5em
+        :opacity 0.7
+      a:hover img
+        :opacity 1
+
     > h2
       +adjust-font-size-to(20px)
 
