--- a/input/_layouts/ru.haml
+++ b/input/_layouts/ru.haml
@@ -6,60 +6,17 @@
 
     %base{:href => "/"}
     :javascript
-      if (location.pathname.indexOf('output') > -1 || location.host.match(/localhost|github/)) {
+      var path = location.pathname;
+      var languages = /(?:\/|^)(en|ru|de)\//;
+      var language = (path.match(languages) || [null, null])[1];
+      if (path.indexOf('/output/') > -1) {
         var base = document.getElementsByTagName('base')[0];
-        var languages = /(?:\/|^)(en|ru|de)\//;
-        var path = location.pathname;
-        var language = (path.match(languages) || [null, null])[1];
         var root = language 
-          ? path.indexOf('/output/') > -1
-            ? path.split(language)[0] 
-            : '/' + language + '/'
+          ? path.split(language)[0] 
           : path.split('/output/')[0] + '/output/';
         base.setAttribute('href', root);
-        document.onclick = function(e) {
-          for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
-            var href = el.getAttribute('href');
-            if (href && el.host == location.host) {
-              // convert absolute path into relative path
-              if (href.charAt(0) == '/')
-                href = href.substring(1);
-              // prepend a current language
-              if (!href.match(languages))
-                href = language + '/' + href;
-              // append index.html for directories
-              if (!href.match(/.html?$/)) {
-                if (href.charAt(href.length - 1) != '/')
-                  href += '/'
-                href += 'index.html';
-              }
-              if (href != el.getAttribute('href')) {
-                el.setAttribute('href', href);
-                e.preventDefault();
-                el.click();
-              }
-              break;
-            }
-          }
-        }
-      } else {
-        document.onclick = function(e) {
-          for (var el = e.target; el && el.nodeType != 9; el = el.parentNode) {
-            var href = el.getAttribute('href');
-            if (location.host != el.host) continue;
-            var zone = location.host.split('.').pop()
-            if (zone == 'com' && href.substring(0, 4) == '/ru/')
-              href = '//' + location.hostname + href.substring(4);
-            else if (zone == 'ru' && href.substring(0, 4) == '/en/')
-              href = '//' + location.hostname + href.substring(3);
-            if (href != el.getAttribute('href')) {
-              el.setAttribute('href', href);
-              e.preventDefault();
-              el.click();
-            }
-          }
-        }
       }
+    %script{:src => "javascripts/script.js"}
     %link{:rel => "stylesheet", :href => "stylesheets/screen.css"}
     %link{:rel => "stylesheet", :href => "http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic"}
 
@@ -73,18 +30,18 @@
               %a{:href => "/about/"} Александр Федоров
               %span<> 
                 , 
-                %a{:href => "/about/profession"} звукорежиссёр
+                %a{:href => "/about/profession/"} звукорежиссёр
 
             %nav
               %menu
-                %li.selected
+                %li
                   %a{:href => "/"}
                     Работы              
                 %li
-                  %a{:href => "/about/services"}
+                  %a{:href => "/about/services/"}
                     Услуги
                 %li
-                  %a{:href => "/about"}
+                  %a{:href => "/about/"}
                     Резюме
                 %li
                   %a.english.language{:href => "{{page.url | to_language: 'en'}}"}<
@@ -140,15 +97,15 @@
       .introduction
         %section<
           %blockquote
-            %a{:href => "/about/profession"} Профессия звукорежиссера 
+            %a{:href => "/about/profession/"} Профессия звукорежиссера 
             прошла путь от выполнения чисто 
-            %a{:href => "/about/technology"} технической&nbsp;функции
+            %a{:href => "/about/technology/"} технической&nbsp;функции
             в области
-            %a{:href => "/about/recording"} звукозаписи
+            %a{:href => "/about/recording/"} звукозаписи
             до полного
-            %a{:href => "/about/services"} творческого участия
+            %a{:href => "/about/services/"} творческого участия
             в создании
-            %a{:href => "/about/sound"} произведений искусства
+            %a{:href => "/about/sound/"} произведений искусства
 
       %main
         %section
@@ -156,21 +113,22 @@
       #footer-pusher
     %footer
       %p 
-        %a{:href => "/about/"}
-          C 1957 и без остановки
+        %a{:href => "/about/"}<>
+          Александр Федоров
       %menu
         %li.selected
           %a{:href => "/"}
             Работы              
         %li
-          %a{:href => "/about/services"}
+          %a{:href => "/about/services/"}
             Услуги
         %li
-          %a{:href => "/about"}
+          %a{:href => "/about/"}
             Резюме
         %li
           %a.english.language{:href => "{{page.url | to_language: 'en'}}"}<
             in english
           %a.english.language.icon{:href => "{{page.url | to_language: 'en'}}"}<>
 
-%script{:src => "javascripts/script.js"}
+%script
+  document.ondomready();
